# apex-studio

./: .gitignore  .gitmodules  20486d82-ebf2-47c0-970e-30c9d13f520c_video_0_130  BACKEND_URL_CONFIG.md  BUILDING.md  CONFIG_API_USAGE.md  LICENSE  PREPROCESSOR_API_SUMMARY.md  PREPROCESSOR_API_USAGE.md  Procfile  Procfile.dev  README.md  attentions_testing.py  drizzle.config.ts  electron-builder.mjs  mod_files.py  p.json  package-lock.json  package.json  vite.config.ts
apps/api/: .gitattributes  .gitignore  .gitmodules  Procfile  README-original.md  SETUP.MD  ana.py  chroma_1_hd_component_vram_ram_profile.csv  com.py  component_vram_ram_profile.csv  debug_patches.py  download_helpers.py  download_vae.py  flux-dev-fill-component_vram_ram_profile.csv  get_helpers.py  gn.py  gunicorn.conf.py  has_file.py  helpers.yml  install.sh  mv.py  p.py  pyproject.toml  requirements.txt  sched.py  sitecustomize.py  tes.py  test.py  test_dl.py  test_hunyuan_image_to_video.py  test_model.py  test_model_flux.py  test_model_wan.py  test_nunchaku.py  test_quants.py  test_real.py  test_sage.py  test_seedvr.py  test_server.py  test_setup.sh  (+9 more)
apps/api/bench/: create_fp8_te_quant.py  create_fp8_transformer_quant.py  create_gguf_te_quants.py  create_gguf_transformer_quants.py  create_ltx2_gemma_text_encoder_weights.py  create_qwenimage_text_encoder_weights.py  create_weights.py  create_zimage_text_encoder_weights.py  test_chroma_hd.py  test_flux2_dev.py  test_flux_dev_fill.py
apps/api/bundle_scripts/: bundle_linux_cuda126.sh
apps/api/dist-intel/: requirements-bundle.txt
apps/api/docs/: compute_requirements.md
apps/api/examples/: compute_capability_example.py  compute_requirements_ampere_only.yml  (+1 more)
(+1930 files in other folders)
