[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "apex-download-rs"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust-accelerated downloader for apex-engine (optional)"

[tool.maturin]
module-name = "apex_download_rs"
features = ["pyo3/extension-module"]


